# N2O-pred

./: .gitignore  pyproject.toml
debug/: debug_expand_to_daily_sequence.py  find_all_depulicate_sowdurs.py  find_all_ferdur_larger_than_sowdur.py  load_rnn_and_predict.py
docs/: data-processing.md  modeling-plan.md  models-comparation.md  research-plan.md
nbconvert/: build_seq_data.py  data_exploration.py  feature_engineering.py  model_comparison.py  train_rf_baseline.py  train_rnn_daily_step.py  train_rnn_obs_step.py
notebooks/: build_seq_data.ipynb  data_exploration.ipynb  expand_daily_sequence.ipynb  explore_processed_data.ipynb  feature_engineering.ipynb  forward_propagation_rnn.ipynb  model_comparison.ipynb  train_rf_baseline.ipynb  train_rnn_daily_step.ipynb  train_rnn_obs_step.ipynb
preprocessor/: encoders.pkl  feature_config.json  scalers.pkl
scripts/: build_seq_data.py  data_exploration.py  data_serialization.py  gen_processed_data.py  model_comparison.py  train_rf.py  train_rf_baseline.py  train_rnn_daily_step.py  train_rnn_obs_step.py
src/n2o_pred/: __init__.py  data.py  evaluation.py  models.py  trainer.py  utils.py
tests/: test_processed_dataset.py
utils/: nbconver_notebooks.sh
