[project]
name = "n2o-pred"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Leo", email = "liaofeng0203@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
  "captum>=0.8.0",
  "jupyter>=1.1.1",
  "loguru>=0.7.3",
  "matplotlib>=3.10.7",
  "pandas>=2.3.3",
  "pytest>=9.0.2",
  "rasterio>=1.4.3",
  "scikit-learn>=1.7.2",
  "scipy>=1.11.0",
  "seaborn>=0.13.2",
  "shap>=0.49.1",
  "tabulate>=0.9.0",
  "torch>=2.7.1",
  "tqdm>=4.67.1",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
